Fix zoom on mobile with inputs

--- a/src/components/activity-form/style/activity-form.css
+++ b/src/components/activity-form/style/activity-form.css
@@ -132,3 +132,7 @@
 select {
   font-size: 16px;
 }
+
+input {
+  font-size: 16px;
+}
